[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Builders And Factories/EraserArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 358, 2297 )

[node name="EraserArea" type="Area2D" groups=["Eraser"]]
position = Vector2( 0, -2 )
collision_layer = 32
collision_mask = 30
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -732, -2222 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 38.5, -2224.5 )
scale = Vector2( 40.35, 230.05 )

[connection signal="area_entered" from="." to="." method="_on_EraserArea_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EraserArea_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
